# vacancies-db

./: .env.example  README.md  pyproject.toml
data/: companies.json
src/: dbmanager.py  hh_api.py  main.py  utils.py  vacancy.py
tests/: test_db_manager.py
